@@ -43,247 +43,252 @@ import com.tnh.baseware.core.dtos.task.TaskTimelineItemDTO;
 @Service
 @FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
 public class TaskQueryService extends GenericService<Task, TaskEditorForm, TaskDTO, ITaskRepository, ITaskMapper, UUID>
-        implements ITaskQueryService {
-    ITaskListRepository taskListRepository;
-    ITaskMemberRepository taskMemberRepository;
-    IProjectService projectService;
-    ITaskRequirementRepository taskRequirementRepository;
-    SecurityUtils securityUtils;
-    ITaskActivityLogRepository taskActivityLogRepository;
-    ITaskCommentRepository taskCommentRepository;
-    ITaskCommentAttachmentRepository taskCommentAttachmentRepository;
-    ITaskActivityLogMapper taskActivityLogMapper;
-    ITaskCommentMapper taskCommentMapper;
+                implements ITaskQueryService {
+        ITaskListRepository taskListRepository;
+        ITaskMemberRepository taskMemberRepository;
+        IProjectService projectService;
+        ITaskRequirementRepository taskRequirementRepository;
+        SecurityUtils securityUtils;
+        ITaskActivityLogRepository taskActivityLogRepository;
+        ITaskCommentRepository taskCommentRepository;
+        ITaskCommentAttachmentRepository taskCommentAttachmentRepository;
+        ITaskActivityLogMapper taskActivityLogMapper;
+        ITaskCommentMapper taskCommentMapper;
 
-    public TaskQueryService(ITaskRepository repository,
-            ITaskMapper mapper,
-            MessageService messageService,
-            ITaskListRepository taskListRepository,
-            ITaskMemberRepository taskMemberRepository,
-            ITaskRequirementRepository taskRequirementRepository,
-            IProjectService projectService,
-            SecurityUtils securityUtils,
-            ITaskActivityLogRepository taskActivityLogRepository,
-            ITaskCommentRepository taskCommentRepository,
-            ITaskCommentAttachmentRepository taskCommentAttachmentRepository,
-            ITaskActivityLogMapper taskActivityLogMapper,
-            ITaskCommentMapper taskCommentMapper) {
-        super(repository, mapper, messageService, Task.class);
-        this.taskListRepository = taskListRepository;
-        this.taskMemberRepository = taskMemberRepository;
-        this.taskRequirementRepository = taskRequirementRepository;
-        this.projectService = projectService;
-        this.securityUtils = securityUtils;
-        this.taskActivityLogRepository = taskActivityLogRepository;
-        this.taskCommentRepository = taskCommentRepository;
-        this.taskCommentAttachmentRepository = taskCommentAttachmentRepository;
-        this.taskActivityLogMapper = taskActivityLogMapper;
-        this.taskCommentMapper = taskCommentMapper;
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<TaskDTO> findByProjectId(UUID projectId) {
-        UUID orgId = securityUtils.currentOrgId();
-        return repository.findByProjectIdAndOrgId(projectId, orgId).stream()
-                .map(mapper::entityToDTO)
-                .toList();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<TaskDTO> findByProjectId(UUID projectId, Pageable pageable) {
-        UUID orgId = securityUtils.currentOrgId();
-        return repository.findByProjectIdAndOrgId(projectId, orgId, pageable)
-                .map(mapper::entityToDTO);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<TaskDTO> findByTaskListId(UUID taskListId) {
-        UUID orgId = securityUtils.currentOrgId();
-        return repository.findByTaskListIdAndOrgId(taskListId, orgId).stream()
-                .map(mapper::entityToDTO)
-                .toList();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<TaskDTO> findByTaskListId(UUID taskListId, Pageable pageable) {
-        UUID orgId = securityUtils.currentOrgId();
-        return repository.findByTaskListIdAndOrgId(taskListId, orgId, pageable)
-                .map(mapper::entityToDTO);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<TaskDTO> findAccessibleByUser() {
-        User currentUser = getCurrentUser();
-        UUID orgId = securityUtils.currentOrgId();
-        UUID userId = currentUser.getId();
-        return repository.findAccessibleByUser(orgId, userId).stream()
-                .map(mapper::entityToDTO)
-                .toList();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<TaskDTO> findAccessibleByUser(Pageable pageable) {
-        User currentUser = getCurrentUser();
-        UUID orgId = securityUtils.currentOrgId();
-        UUID userId = currentUser.getId();
-        return repository.findAccessibleByUser(orgId, userId, pageable)
-                .map(mapper::entityToDTO);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<TaskDTO> findByStatus(TaskStatus status) {
-        UUID orgId = securityUtils.currentOrgId();
-        return repository.findByStatusAndOrgId(status, orgId).stream()
-                .map(mapper::entityToDTO)
-                .toList();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<TaskDTO> findByStatus(TaskStatus status, Pageable pageable) {
-        UUID orgId = securityUtils.currentOrgId();
-        return repository.findByStatusAndOrgId(status, orgId, pageable)
-                .map(mapper::entityToDTO);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<TaskDTO> searchTasksCreatedByMe(SearchRequest searchRequest) {
-        User currentUser = getCurrentUser();
-        UUID orgId = securityUtils.currentOrgId();
-
-        List<FilterRequest> filters = new ArrayList<>();
-        if (searchRequest != null && searchRequest.getFilters() != null) {
-            filters.addAll(searchRequest.getFilters());
+        public TaskQueryService(ITaskRepository repository,
+                        ITaskMapper mapper,
+                        MessageService messageService,
+                        ITaskListRepository taskListRepository,
+                        ITaskMemberRepository taskMemberRepository,
+                        ITaskRequirementRepository taskRequirementRepository,
+                        IProjectService projectService,
+                        SecurityUtils securityUtils,
+                        ITaskActivityLogRepository taskActivityLogRepository,
+                        ITaskCommentRepository taskCommentRepository,
+                        ITaskCommentAttachmentRepository taskCommentAttachmentRepository,
+                        ITaskActivityLogMapper taskActivityLogMapper,
+                        ITaskCommentMapper taskCommentMapper) {
+                super(repository, mapper, messageService, Task.class);
+                this.taskListRepository = taskListRepository;
+                this.taskMemberRepository = taskMemberRepository;
+                this.taskRequirementRepository = taskRequirementRepository;
+                this.projectService = projectService;
+                this.securityUtils = securityUtils;
+                this.taskActivityLogRepository = taskActivityLogRepository;
+                this.taskCommentRepository = taskCommentRepository;
+                this.taskCommentAttachmentRepository = taskCommentAttachmentRepository;
+                this.taskActivityLogMapper = taskActivityLogMapper;
+                this.taskCommentMapper = taskCommentMapper;
         }
 
-        filters.add(FilterRequest.builder()
-                .key("createdBy")
-                .operator(Operator.EQUAL)
-                .fieldType(FieldType.STRING)
-                .value(currentUser.getUsername())
-                .build());
-        filters.add(FilterRequest.builder()
-                .key("project.organization.id")
-                .operator(Operator.EQUAL)
-                .fieldType(FieldType.UUID)
-                .value(orgId.toString())
-                .build());
-
-        SearchRequest securedRequest = SearchRequest.builder()
-                .filters(filters)
-                .sorts(searchRequest != null ? searchRequest.getSorts() : null)
-                .page(searchRequest != null ? searchRequest.getPage() : null)
-                .size(searchRequest != null ? searchRequest.getSize() : null)
-                .build();
-        var specification = new GenericSpecification<Task>(securedRequest);
-        var pageable = GenericSpecification.getPageable(securedRequest.getPage(), securedRequest.getSize());
-        return repository.findAll(specification, pageable).map(mapper::entityToDTO);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<TaskDTO> searchTasksAssignedToMe(SearchRequest searchRequest) {
-        User currentUser = getCurrentUser();
-        UUID orgId = securityUtils.currentOrgId();
-
-        List<FilterRequest> filters = new ArrayList<>();
-        if (searchRequest != null && searchRequest.getFilters() != null) {
-            filters.addAll(searchRequest.getFilters());
+        @Override
+        @Transactional(readOnly = true)
+        public List<TaskDTO> findByProjectId(UUID projectId) {
+                UUID orgId = securityUtils.currentOrgId();
+                return repository.findByProjectIdAndOrgId(projectId, orgId).stream()
+                                .map(mapper::entityToDTO)
+                                .toList();
         }
 
-        filters.add(FilterRequest.builder()
-                .key("project.organization.id")
-                .operator(Operator.EQUAL)
-                .fieldType(FieldType.UUID)
-                .value(orgId.toString())
-                .build());
+        @Override
+        @Transactional(readOnly = true)
+        public Page<TaskDTO> findByProjectId(UUID projectId, Pageable pageable) {
+                UUID orgId = securityUtils.currentOrgId();
+                return repository.findByProjectIdAndOrgId(projectId, orgId, pageable)
+                                .map(mapper::entityToDTO);
+        }
 
-        SearchRequest securedRequest = SearchRequest.builder()
-                .filters(filters)
-                .sorts(searchRequest != null ? searchRequest.getSorts() : null)
-                .page(searchRequest != null ? searchRequest.getPage() : null)
-                .size(searchRequest != null ? searchRequest.getSize() : null)
-                .build();
-        var baseSpec = new GenericSpecification<Task>(securedRequest);
-        Specification<Task> assignedToMeSpec = (root, query, cb) -> {
-            var subquery = query.subquery(UUID.class);
-            var taskMember = subquery.from(TaskMember.class);
-            subquery.select(taskMember.get("task").get("id"))
-                    .where(
-                            cb.equal(taskMember.get("user").get("id"), currentUser.getId()),
-                            taskMember.get("role").in(TaskMemberRole.ASSIGNEE, TaskMemberRole.LEAD));
-            return root.get("id").in(subquery);
-        };
-        var combinedSpec = baseSpec.and(assignedToMeSpec);
-        var pageable = GenericSpecification.getPageable(securedRequest.getPage(), securedRequest.getSize());
-        return repository.findAll(combinedSpec, pageable).map(mapper::entityToDTO);
-    }
+        @Override
+        @Transactional(readOnly = true)
+        public List<TaskDTO> findByTaskListId(UUID taskListId) {
+                UUID orgId = securityUtils.currentOrgId();
+                return repository.findByTaskListIdAndOrgId(taskListId, orgId).stream()
+                                .map(mapper::entityToDTO)
+                                .toList();
+        }
 
-    @Override
-    @Transactional
-    public TaskDTO create(TaskEditorForm form) {
-        var currentUser = getCurrentUser();
-        var task = repository.save(mapper.formToEntity(form));
-        var taskMember = TaskMember.builder()
-                .task(task)
-                .user(currentUser)
-                .role(TaskMemberRole.OWNER)
-                .build();
-        taskMemberRepository.save(taskMember);
-        return mapper.entityToDTO(task);
-    }
+        @Override
+        @Transactional(readOnly = true)
+        public Page<TaskDTO> findByTaskListId(UUID taskListId, Pageable pageable) {
+                UUID orgId = securityUtils.currentOrgId();
+                return repository.findByTaskListIdAndOrgId(taskListId, orgId, pageable)
+                                .map(mapper::entityToDTO);
+        }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<TaskTimelineItemDTO> getTaskTimeline(UUID taskId) {
-        // 1. Convert logs to timeline items
-        var logItems = taskActivityLogRepository.findByTaskId(taskId).stream()
-                .filter(log -> log.getActionType() != LogActionType.ADD_COMMENT)
-                .map(taskActivityLogMapper::entityToDTO)
-                .map(dto -> TaskTimelineItemDTO.builder()
-                        .type("ACTIVITY")
-                        .id(dto.getId())
-                        .timestamp(dto.getCreatedDate())
-                        .activity(dto)
-                        .build())
-                .collect(Collectors.toList());
+        @Override
+        @Transactional(readOnly = true)
+        public List<TaskDTO> findAccessibleByUser() {
+                User currentUser = getCurrentUser();
+                UUID orgId = securityUtils.currentOrgId();
+                UUID userId = currentUser.getId();
+                return repository.findAccessibleByUser(orgId, userId).stream()
+                                .map(mapper::entityToDTO)
+                                .toList();
+        }
 
-        // 2. Fetch ROOT comments and populate counts (Lazy Loading)
-        var rootComments = taskCommentRepository.findByTaskIdAndParentCommentIsNull(taskId).stream()
-                .map(comment -> {
-                    var dto = taskCommentMapper.entityToDTO(comment);
-                    dto.setReplyCount(taskCommentRepository.countByParentComment_Id(comment.getId()));
-                    dto.setAttachmentCount(taskCommentAttachmentRepository.countByComment_Id(comment.getId()));
-                    dto.setReplies(null);
-                    return dto;
-                })
-                .collect(Collectors.toList());
+        @Override
+        @Transactional(readOnly = true)
+        public Page<TaskDTO> findAccessibleByUser(Pageable pageable) {
+                User currentUser = getCurrentUser();
+                UUID orgId = securityUtils.currentOrgId();
+                UUID userId = currentUser.getId();
+                return repository.findAccessibleByUser(orgId, userId, pageable)
+                                .map(mapper::entityToDTO);
+        }
 
-        // 3. Convert root comments to timeline items
-        var commentItems = rootComments.stream()
-                .map(dto -> TaskTimelineItemDTO.builder()
-                        .type("COMMENT")
-                        .id(dto.getId())
-                        .timestamp(dto.getCreatedDate())
-                        .comment(dto)
-                        .build())
-                .collect(Collectors.toList());
+        @Override
+        @Transactional(readOnly = true)
+        public List<TaskDTO> findByStatus(TaskStatus status) {
+                UUID orgId = securityUtils.currentOrgId();
+                return repository.findByStatusAndOrgId(status, orgId).stream()
+                                .map(mapper::entityToDTO)
+                                .toList();
+        }
 
-        // 4. Merge and sort reverse chronologically
-        List<TaskTimelineItemDTO> result = new ArrayList<>(logItems);
-        result.addAll(commentItems);
-        result.sort(Comparator.comparing(
-                TaskTimelineItemDTO::getTimestamp,
-                Comparator.nullsLast(Comparator.reverseOrder())));
+        @Override
+        @Transactional(readOnly = true)
+        public Page<TaskDTO> findByStatus(TaskStatus status, Pageable pageable) {
+                UUID orgId = securityUtils.currentOrgId();
+                return repository.findByStatusAndOrgId(status, orgId, pageable)
+                                .map(mapper::entityToDTO);
+        }
 
-        return result;
-    }
+        @Override
+        @Transactional(readOnly = true)
+        public Page<TaskDTO> searchTasksCreatedByMe(SearchRequest searchRequest) {
+                User currentUser = getCurrentUser();
+                UUID orgId = securityUtils.currentOrgId();
+
+                List<FilterRequest> filters = new ArrayList<>();
+                if (searchRequest != null && searchRequest.getFilters() != null) {
+                        filters.addAll(searchRequest.getFilters());
+                }
+
+                filters.add(FilterRequest.builder()
+                                .key("createdBy")
+                                .operator(Operator.EQUAL)
+                                .fieldType(FieldType.STRING)
+                                .value(currentUser.getUsername())
+                                .build());
+
+                if (!Boolean.TRUE.equals(securityUtils.checkIsSuperAdmin())) {
+                        filters.add(FilterRequest.builder()
+                                        .key("project.organization.id")
+                                        .operator(Operator.EQUAL)
+                                        .fieldType(FieldType.UUID)
+                                        .value(orgId.toString())
+                                        .build());
+                }
+                SearchRequest securedRequest = SearchRequest.builder()
+                                .filters(filters)
+                                .sorts(searchRequest != null ? searchRequest.getSorts() : null)
+                                .page(searchRequest != null ? searchRequest.getPage() : null)
+                                .size(searchRequest != null ? searchRequest.getSize() : null)
+                                .build();
+                var specification = new GenericSpecification<Task>(securedRequest);
+                var pageable = GenericSpecification.getPageable(securedRequest.getPage(), securedRequest.getSize());
+                return repository.findAll(specification, pageable).map(mapper::entityToDTO);
+        }
+
+        @Override
+        @Transactional(readOnly = true)
+        public Page<TaskDTO> searchTasksAssignedToMe(SearchRequest searchRequest) {
+                User currentUser = getCurrentUser();
+                UUID orgId = securityUtils.currentOrgId();
+
+                List<FilterRequest> filters = new ArrayList<>();
+                if (searchRequest != null && searchRequest.getFilters() != null) {
+                        filters.addAll(searchRequest.getFilters());
+                }
+
+                filters.add(FilterRequest.builder()
+                                .key("project.organization.id")
+                                .operator(Operator.EQUAL)
+                                .fieldType(FieldType.UUID)
+                                .value(orgId.toString())
+                                .build());
+
+                SearchRequest securedRequest = SearchRequest.builder()
+                                .filters(filters)
+                                .sorts(searchRequest != null ? searchRequest.getSorts() : null)
+                                .page(searchRequest != null ? searchRequest.getPage() : null)
+                                .size(searchRequest != null ? searchRequest.getSize() : null)
+                                .build();
+                var baseSpec = new GenericSpecification<Task>(securedRequest);
+                Specification<Task> assignedToMeSpec = (root, query, cb) -> {
+                        var subquery = query.subquery(UUID.class);
+                        var taskMember = subquery.from(TaskMember.class);
+                        subquery.select(taskMember.get("task").get("id"))
+                                        .where(
+                                                        cb.equal(taskMember.get("user").get("id"), currentUser.getId()),
+                                                        taskMember.get("role").in(TaskMemberRole.ASSIGNEE,
+                                                                        TaskMemberRole.LEAD));
+                        return root.get("id").in(subquery);
+                };
+                var combinedSpec = baseSpec.and(assignedToMeSpec);
+                var pageable = GenericSpecification.getPageable(securedRequest.getPage(), securedRequest.getSize());
+                return repository.findAll(combinedSpec, pageable).map(mapper::entityToDTO);
+        }
+
+        @Override
+        @Transactional
+        public TaskDTO create(TaskEditorForm form) {
+                var currentUser = getCurrentUser();
+                var task = repository.save(mapper.formToEntity(form));
+                var taskMember = TaskMember.builder()
+                                .task(task)
+                                .user(currentUser)
+                                .role(TaskMemberRole.OWNER)
+                                .build();
+                taskMemberRepository.save(taskMember);
+                return mapper.entityToDTO(task);
+        }
+
+        @Override
+        @Transactional(readOnly = true)
+        public List<TaskTimelineItemDTO> getTaskTimeline(UUID taskId) {
+                // 1. Convert logs to timeline items
+                var logItems = taskActivityLogRepository.findByTaskId(taskId).stream()
+                                .filter(log -> log.getActionType() != LogActionType.ADD_COMMENT)
+                                .map(taskActivityLogMapper::entityToDTO)
+                                .map(dto -> TaskTimelineItemDTO.builder()
+                                                .type("ACTIVITY")
+                                                .id(dto.getId())
+                                                .timestamp(dto.getCreatedDate())
+                                                .activity(dto)
+                                                .build())
+                                .collect(Collectors.toList());
+
+                // 2. Fetch ROOT comments and populate counts (Lazy Loading)
+                var rootComments = taskCommentRepository.findByTaskIdAndParentCommentIsNull(taskId).stream()
+                                .map(comment -> {
+                                        var dto = taskCommentMapper.entityToDTO(comment);
+                                        dto.setReplyCount(
+                                                        taskCommentRepository.countByParentComment_Id(comment.getId()));
+                                        dto.setAttachmentCount(taskCommentAttachmentRepository
+                                                        .countByComment_Id(comment.getId()));
+                                        dto.setReplies(null);
+                                        return dto;
+                                })
+                                .collect(Collectors.toList());
+
+                // 3. Convert root comments to timeline items
+                var commentItems = rootComments.stream()
+                                .map(dto -> TaskTimelineItemDTO.builder()
+                                                .type("COMMENT")
+                                                .id(dto.getId())
+                                                .timestamp(dto.getCreatedDate())
+                                                .comment(dto)
+                                                .build())
+                                .collect(Collectors.toList());
+
+                // 4. Merge and sort reverse chronologically
+                List<TaskTimelineItemDTO> result = new ArrayList<>(logItems);
+                result.addAll(commentItems);
+                result.sort(Comparator.comparing(
+                                TaskTimelineItemDTO::getTimestamp,
+                                Comparator.nullsLast(Comparator.reverseOrder())));
+
+                return result;
+        }
 }
